# anixart-app

./: .gitignore  Cargo.toml  app.json  build.rs  style.css
.github/workflows/: rust.yml  rust_windows.yml
resources/: resources.gresource.xml  style.css
resources/ui/: anicard.ui  anime_detail.ui  bookmarks_page.ui  home_page.ui  login_window.ui  main_window.ui
src/: anicard.rs  anicard.ui  api_client.rs  main.rs  state.rs  utils.rs  windows.rs
src/utils/: config.rs  filter.rs  image.rs  image_download.rs  state.rs  tab_loader.rs  ui.rs
src/windows/: login_window.rs
